Fix section overflow

--- a/_sass/_2-base.scss
+++ b/_sass/_2-base.scss
@@ -128,8 +128,8 @@ code {
 
 
   @media screen and (min-height: 800px) {
-    height: 100%;
-    height: 100vh;
+    min-height: 100%;
+    min-height: 100vh;
   }
 }
 
